<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.joeli.transfer.view.MainView" />

        <variable
            name="model"
            type="com.joeli.transfer.model.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/transfer_amount"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar_sign"
                        android:textColor="@android:color/white"
                        android:textSize="72sp" />

                    <EditText
                        android:id="@+id/amountField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="@{!model.isSubmitted}"
                        android:gravity="end"
                        android:autofillHints="@string/submit"
                        android:hint="@string/amount_hint"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:minWidth="160dp"
                        android:onTextChanged="@{view.onAmountChanged}"
                        android:textColor="@android:color/white"
                        android:textSize="72sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/selector_button"
                    android:enabled="false"
                    android:onClick="@{(v) -> view.onSubmit()}"
                    android:text="@string/submit"
                    android:visibility="@{model.isSubmitted ? View.GONE : View.VISIBLE}" />
            </LinearLayout>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="@{model.isSubmitted ? View.VISIBLE : View.GONE}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{model.isLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@{model.description}"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/statusButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Success" />

            <ImageButton
                android:id="@+id/statusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@{model.isSuccess ? @drawable/shape_circle_green : @drawable/shape_circle_red}"
                android:padding="8dp"
                android:src="@{model.isSuccess ? @drawable/success : @drawable/fail}"
                android:visibility="@{model.isLoading ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/selector_button"
                android:onClick="@{(v) -> view.onReset()}"
                android:text="@string/reset_desc"
                android:visibility="@{model.isLoading ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</layout>